<resources>
    <string name="app_name">Calculadora de Passagens</string>
    <string name="question_1">Qual meio de transporte você utiliza?</string>
    <string name="question_2">Quantas viagens você faz por dia?</string>
    <string name="question_3">Qual o preço atual de casa passagem?</string>
    <string name="answer_1">Ex. Metrô</string>
    <string name="answer_2">Ex. 2</string>
    <string name="answer_3">Ex. 4.40</string>
</resources>